<resources>
    <string name="app_name">Gasify</string>
    <string name="enjoy_hassle_free_fuel_savings">Enjoy hassle-free fuel savings</string>
    <string name="app_logo">Gasify Logo</string>
    <string name="car_illustration">Car Illustration</string>
    <string name="get_started">Get Started</string>
    <string name="gasify_logo">Gasify Logo</string>
    <string name="car_image">Car Image</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email_input">Enter your email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_input">Enter your password</string>
    <string name="remember">Remember me</string>
    <string name="password_forgot">Forgot password ?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_input">Confirm Password</string>
    <string name="already_have_account">Already have an account ?</string>
    <string name="fuel_expense_title">Fuel Expense For This Month</string>
    <string name="report_button">report button</string>
    <string name="trip_button">trip button\n</string>
    <string name="profile_button">profile button</string>
    <string name="username">Username</string>
    <string name="username_input">Enter your username</string>
    <string name="google_maps_key">AIzaSyCyiLkV8WHbSANQA1Y8d4Ru-R1phaQoGOo</string>
    <string name="refuel_button">refuel_button</string>
</resources>