<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/white">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="163dp"
            app:srcCompat="@drawable/gasify_high_resolution_logo_transparent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/purple_500"
            app:tabIndicatorHeight="2dp"
            app:tabTextColor="#CCCCCC"
            app:tabSelectedTextColor="@color/purple_500"
            app:tabIndicatorFullWidth="true"
            app:tabBackground="@drawable/tab_background"
            >

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup" />

        </com.google.android.material.tabs.TabLayout>

        <!-- Username -->
        <TextView
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:endIconDrawable="@drawable/ic_person"
            app:endIconMode="custom"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/username_input"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <TextView
            android:id="@+id/emailInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:visibility="gone"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:endIconDrawable="@drawable/ic_mail"
            app:endIconMode="custom"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email_input"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/password_input"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password -->
        <TextView
            android:id="@+id/confirmPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/confirm_password_input"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Remember me checkbox -->
        <CheckBox
            android:id="@+id/rememberCBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

        <!-- Login button -->
        <Button
            android:id="@+id/authBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/login"/>

        <!-- Forgot password text -->
        <TextView
            android:id="@+id/forgotPwdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password_forgot"
            android:textAlignment="center"
            android:textColor="#5600CC"/>

        <!-- Have an account button -->
        <TextView
            android:id="@+id/alreadyHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/already_have_account"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/orText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="OR"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">
            <!-- Google button -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/googleLoginButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="#EA4335">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_google"
                    app:tint="#FFFFFF"/>
            </com.google.android.material.card.MaterialCardView>

            <!-- Meta button -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/facebookLoginButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="2dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_meta"
                    app:tint="#1877F2"/>
            </com.google.android.material.card.MaterialCardView>

            <!-- Github button -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/githubLoginButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="#000000">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_github"
                    app:tint="#FFFFFF"/>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>